--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -94,3 +94,7 @@ thead th:empty {
     border: thin solid red !important;
     display: none;
 }
+
+.ndfHFb-c4YZDc-Wrql6b{
+  display:none !important;
+}
