--- a/src/components/FeaturedPapers/styles.module.css
+++ b/src/components/FeaturedPapers/styles.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   padding: 1rem 0;
   width: 100%;
+  background-color: #f5f6f7;
 }
 
 .mission{
@@ -11,4 +12,16 @@
 
 .featureSvg {
   min-width: 300px;
+}
+
+.tweet {
+  font-size: 15px;
+}
+
+.tweetMeta {
+  color: var(--ifm-color-emphasis-700);
+}
+
+.tweetMeta strong {
+  color: var(--ifm-font-color-base);
 }
