Switch images to webp, add video backgrounds
Replaced PNG and JPG images with webp format for better performance and updated references throughout the codebase. Added video backgrounds to homepage and recent updates section, including new video assets and related CSS for improved visual presentation. Updated some text and links for clarity and consistency.

--- a/src/components/RecentUpdates/styles.module.css
+++ b/src/components/RecentUpdates/styles.module.css
@@ -5,10 +5,16 @@
   width: 100%;
 }
 
+[data-theme='dark'] li > a{
+  color: #2991ff;
+}
+
+
 .mission{
   padding: 1rem;
 }
 
 .featureSvg {
   height: 200px;
+  align-items: center;
 }
