--- a/src/components/FeaturedPapers/styles.module.css
+++ b/src/components/FeaturedPapers/styles.module.css
@@ -6,6 +6,14 @@
   background-color: #f5f6f7;
 }
 
+[data-theme='dark'] .features {
+    background-color: #444950;
+}
+
+[data-theme='dark'] h3 > a{
+  color: #2991ff;
+}
+
 .mission{
   padding: 1rem;
 }
