--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -6,6 +6,14 @@
   background-color: #f5f6f7;
 }
 
+[data-theme='dark'] .features {
+    background-color: #444950;
+}
+
+[data-theme='dark'] h3 {
+  color: #fff;
+}
+
 .featureSvg {
   height: 200px;
   width: 200px;
