--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,8 @@
 }
 */
 
+
+
 :root {
   --ifm-color-primary: #0e59a9;
   --ifm-color-primary-dark: #0d5098;
@@ -55,35 +57,65 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+[data-theme='dark'] .navbar__link:hover, .navbar__link--active {
+  color:#2991ff;
+}
+
+[data-theme='dark'] .row a {
+  color:#2991ff;
+  text-decoration: none !important;
+}
+
+[data-theme='light'] .navbar__link:hover, .navbar__link--active {
+  color:#0e59a9;
+}
+
+[data-theme='light'] .row a {
+  color:#0e59a9;
+  text-decoration: none !important;
+}
+
 .row{
   margin-bottom: 15px;
 }
 
+
 .hero {
     align-items: center;
-    background-image: url('/img/background.png') !important;;
     color: var(--ifm-hero-text-color);
-    min-height: 500px !important;
-    background-size: cover;
+    min-height: 600px !important;
     position: relative;
     color: white;
+    overflow: hidden;
+}
+
+/* 2. New video rule */
+.background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top center;
+    z-index: 0;
 }
 
 .hero::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.65);
-  z-index: 1;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.65);
+    z-index: 1;
 }
 
 .hero .container {
-  position: relative;
-  z-index: 2;
-  padding: 20px;
+    position: relative;
+    z-index: 2; 
+    padding: 20px;
 }
 
 .map-responsive{
