--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -20,4 +20,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  
+}
+
+
+[data-theme='dark'] header > div > div > a.button.white-btn {
+  color:#fff;
+  text-decoration: none !important;
 }
