--- a/src/components/LogoSlider/styles.module.css
+++ b/src/components/LogoSlider/styles.module.css
@@ -15,6 +15,10 @@
   display: flex; 
 }
 
+[data-theme='dark'] .logos {
+    background: #1b1b1d;
+}
+
 /* White Fades */
 .logos::before,
 .logos::after {
@@ -25,6 +29,16 @@
   content: "";
   z-index: 2;
 }
+
+[data-theme='dark'] .logos::before {
+  background: linear-gradient(to right, #1b1b1d, transparent);
+}
+
+
+[data-theme='dark'] .logos::after {
+  background: linear-gradient(to left, #1b1b1d, transparent);
+}
+
 
 .logos::before {
   left: 0;
