--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,8 +18,9 @@
 */
 
 
-
 :root {
+  /* Overrides the global base font family */
+  --ifm-font-family-base: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   --ifm-color-primary: #0e59a9;
   --ifm-color-primary-dark: #0d5098;
   --ifm-color-primary-darker: #0c4c90;
@@ -199,3 +200,46 @@ thead th:empty {
     font-size: 15pt !important;
   }
 }
+
+@keyframes pulse {
+  0% { transform: scale(1); opacity: 0.5; }
+  50% { transform: scale(1.1); opacity: 0.8; }
+  100% { transform: scale(1); opacity: 0.5; }
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 25%;
+  left: 30%;
+  width: 80vw;
+  height: 80vh;
+  transform: translate(-50%, -50%);
+  z-index: -1; /* Send behind text */
+  
+  background-image: url('/img/favicon.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-blend-mode: overlay;
+  animation: pulse 10s ease-in-out infinite;
+}
+
+[data-theme='dark'] body::before {
+  content: "";
+  position: fixed;
+  top: 25%;
+  left: 30%;
+  width: 80vw;
+  height: 80vh;
+  transform: translate(-50%, -50%);
+  z-index: -1; /* Send behind text */
+  
+  background-image: url('/img/favicon-dark.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-blend-mode: overlay;
+  animation: pulse 10s ease-in-out infinite;
+}
+
