--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -84,6 +84,11 @@
   margin-bottom: 15px;
 }
 
+.navbar__logo {
+  height: 3rem !important;
+  margin-bottom: .3rem !important;
+}
+
 
 .hero {
     align-items: center;
